--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="action_add_favourite">Add to Favourites</string>
     <string name="action_play_next">Play Next</string>
     <string name="backdrop_title">LOVE MOVIES</string>
-    <string name="backdrop_subtitle">This season top 20 CLIPS</string>
-    <string name="player_activity_name">Media player</string>
+    <string name="backdrop_subtitle">Your Favourite Clips</string>
+    <string name="player_activity_name">Clip player</string>
     <string name="media_url_mp4_1">http://res.cloudinary.com/dffg072sf/video/upload/so_45,eo_55/marvelavengers.mp4</string>
     <string name="media_url_mp4_2">https://res.cloudinary.com/demo/video/upload/so_6.5,eo_10/dog.mp4</string>
     <string name="media_url_mp4">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>
